hphp/hack/test/typecheck/ppl/static_call_in_other_class.php.exp
File "static_call_in_other_class.php", line 11, characters 5-23:
Cannot call a static method on a <<__PPL>> class by classname. Use self::, static::, or parent:: (Typing[4265])
