hphp/hack/test/typecheck/ppl/static_call_in_other_class.php
<?hh // strict

<<__PPL>>
class MyClass {
  public static function staticMeth(): void {
  }
}

class NonPPLClass {
  public function staticCall(): void {
    MyClass::staticMeth();
  }
}
